v 0.2.5 - Fixed the tooltip still appears after closing the legend when the line data points overlap. And fixed the x-axis labels errors when the data point was less or equal to 5.

--- a/css/d3-instant-charts.css
+++ b/css/d3-instant-charts.css
@@ -12,7 +12,7 @@ svg.d3-instant-charts .axis-x line {
 
 /* X軸刻度文字 */
 svg.d3-instant-charts .axis-x > g > text {
-    font: 1rem "Courier New", "微軟正黑體", "Microsoft JhengHei", Arial;
+    font: 0.8rem "Courier New", "微軟正黑體", "Microsoft JhengHei", Arial;
     fill: #333333;
     font-weight: 800;
 }
